--- a/renovate.json
+++ b/renovate.json
@@ -4,16 +4,17 @@
   "forkProcessing": "enabled",
   "dependencyDashboard": true,
   "assignees": ["thewriteway"],
+  "separateMinorPatch": true,
+  "separateMajorMinor": true,
+  "separateMultipleMajor": true,
+  "separateMultipleMinor": true,
   "packageRules": [
     {
-      "updateTypes": ["minor", "patch"],
-      "groupName": "all non-major dependencies",
-      "groupSlug": "all-minor-patch"
+      "updateTypes": ["minor", "patch"]
     },
     {
       "datasources": ["maven"],
-      "packagePatterns": ["*"],
-      "groupName": "all maven dependencies"
+      "packagePatterns": ["*"]
     }
   ],
   "repositories": ["thewriteway/airsonic-advanced"]
