--- a/airsonic-main/pom.xml
+++ b/airsonic-main/pom.xml
@@ -607,6 +607,11 @@
             <artifactId>imageio-webp</artifactId>
             <version>3.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.5</version>
+        </dependency>
 
     </dependencies>
 
