--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -16,6 +16,22 @@ env:
   REGISTRY_IMAGE: ghcr.io/kagemomiji/airsonic-advanced
 
 jobs:
+  version:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          java-version: 21
+          distribution: 'temurin'
+      - name: build-metadata
+        run: mvn generate-resources
+      - uses: actions/upload-artifact@v4
+        with:
+          name: build-metadata
+          path: airsonic-main/target/generated/build-metadata/build.properties 
   deploy:
     runs-on: ubuntu-latest
     strategy:
@@ -33,7 +49,6 @@ jobs:
           docker_version: 21.0.7_6
     outputs:
       tag: ${{ steps.tagcalc.outputs.tag }}
-      docker-label: ${{ steps.docker-meta.outputs.labels }}
     steps:
       - name: Prepare
         id: prep
@@ -41,6 +56,12 @@ jobs:
           platform="${{ matrix.cfg.platform }}"
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_OUTPUT
       - uses: actions/checkout@v4
+      - run: |
+          mkdir -p airsonic-main/target/generated/build-metadata
+      - uses: actions/download-artifact@v4
+        with:
+          name: build-metadata
+          path: airsonic-main/target/generated/build-metadata/  
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
@@ -62,7 +83,7 @@ jobs:
             ${{ runner.os }}-m2-
       - run: mkdir -p ${DEFAULT_MUSIC_FOLDER}
       - name: Build with Maven
-        run: mvn -DexcludedGroups=${EXCLUDED_TEST_GROUPS} -Ddocker.testing.default-music-folder=${DEFAULT_MUSIC_FOLDER} verify -B -P integration-test
+        run: mvn -DexcludedGroups=${EXCLUDED_TEST_GROUPS} -Ddocker.testing.default-music-folder=${DEFAULT_MUSIC_FOLDER} -Dmaven.buildNumber.skip=true verify -B -P integration-test
       - name: Calculate tags
         if: success()
         id: tagcalc
