--- a/.github/workflows/pr_build_docker_from_fork.yml
+++ b/.github/workflows/pr_build_docker_from_fork.yml
@@ -10,6 +10,22 @@ env:
   REGISTRY_IMAGE: ghcr.io/kagemomiji/airsonic-advanced
 
 jobs:
+  version:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          java-version: 21
+          distribution: 'temurin'
+      - name: build-metadata
+        run: mvn generate-resources
+      - uses: actions/upload-artifact@v4
+        with:
+          name: build-metadata
+          path: airsonic-main/target/generated/build-metadata/build.properties
   deploy:
     strategy:
       fail-fast: false
@@ -38,6 +54,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
+      - run: |
+          mkdir -p airsonic-main/target/generated/build-metadata
+      - uses: actions/download-artifact@v4
+        with:
+          name: build-metadata
+          path: airsonic-main/target/generated/build-metadata/
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
