fix(ci): skip build number during Maven package in Docker workflow

--- a/.github/workflows/pr_build_docker_from_fork.yml
+++ b/.github/workflows/pr_build_docker_from_fork.yml
@@ -95,7 +95,7 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build with Maven
-        run: mvn package -DskipTests -B -P docker
+        run: mvn package -DskipTests -B -P docker -Dmaven.buildNumber.skip=true
       - name: Build and push by digest
         uses: docker/build-push-action@v6
         id: build
