--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -26,6 +26,15 @@ jobs:
         with:
           java-version: 21
           distribution: 'temurin'
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-m2-
+      - name: Build with Maven
+        run: mvn generate-sources -B -P docker
       - name: build-metadata
         run: mvn generate-resources
       - uses: actions/upload-artifact@v4
@@ -34,6 +43,7 @@ jobs:
           path: airsonic-main/target/generated/build-metadata/build.properties 
   deploy:
     runs-on: ubuntu-latest
+    needs: version
     strategy:
       fail-fast: false
       matrix:
