--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -34,9 +34,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-m2-
       - name: Build with Maven
-        run: mvn generate-sources -B -P docker
-      - name: build-metadata
-        run: mvn generate-resources
+        run: mvn verify -B -DskipTests=true
       - uses: actions/upload-artifact@v4
         with:
           name: build-metadata
