--- a/airsonic-main/pom.xml
+++ b/airsonic-main/pom.xml
@@ -720,7 +720,7 @@
                     <execution>
                         <goals>
                             <goal>compile</goal>
-                            <goal>test-compile</goal>
+                            <!--<goal>test-compile</goal>-->
                         </goals>
                     </execution>
                 </executions>
