--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -35,6 +35,8 @@ jobs:
             ${{ runner.os }}-m2-
       - name: Build with Maven
         run: mvn verify -B -DskipTests=true
+      - name: Generate build metadata
+        run: mvn generate-resources
       - uses: actions/upload-artifact@v4
         with:
           name: build-metadata
