--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -66,10 +66,13 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           mkdir -p airsonic-main/target/classes
+          mkdir -p airsonic-main/target/generated/build-metadata
       - uses: actions/download-artifact@v4
         with:
           name: build-metadata
           path: airsonic-main/target/classes/  
+      - run: |
+          cp airsonic-main/target/classes/build.properties airsonic-main/target/generated/build-metadata/build.properties
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
